When looking through the search parameters to build up information about validating search inputs better on the API (recently created linear issue) found the public docs weren't fully up to date - fixing this.
